--- a/OOD/index.html
+++ b/OOD/index.html
@@ -69,6 +69,7 @@
                     </li>
                 </ul>
                 
+                <blockquote>::before</blockquote>
 
             </div>
 
